TP sonarqube software quality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,12 @@
       <p>Mini app fil rouge pour CI/CD + tests</p>
     </header>
 
+    <div id="confirm-modal" hidden>
+        <p id="modal-text"></p>
+        <button id="confirm-yes">Oui</button>
+        <button id="confirm-no">Non</button>
+    </div>
+
     <section class="card">
       <h2>Créer une tâche</h2>
       <form id="createForm">
